2008-12-15  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.11

2008-12-15  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Make main launcher category completely transparent when showing 2nd
	level.

	* src/launcher/hd-launcher.c (hd_launcher_set_top_blur):

2008-12-15  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Hiding the launcher button when zooming in on app is no longer
	necessary. Fixes NB#92583

	* src/home/hd-switcher.c (hd_switcher_item_selected):

2008-12-15  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Switched back to using a fake image for the loading screen.

	* data/Makefile.am:
	* src/launcher/hd-launcher.c (hd_launcher_constructed,
	  hd_launcher_transition_app_start, hd_launcher_transition_new_frame):
	* data/blank-window.png: Updated to latest theme.

2008-12-13  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_map_notify): Xmas workaround:
	Hide launcher and switcher if they are shown when a new window is
	mapped. This enables using things like power menu in launcher and
	switcher views.
	* src/home/hd-switcher.h (hd_switcher_hide_launcher): Make public for
	the above code.

2008-12-12  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	Partial checkin of progress indicator implementation.

	* src/mb/hd-atoms.[ch]: Add atom for progress indicator
	* src/home/hd-home.c: Respond to progress indicator change by
	  redrawing screen.
	* src/mb/hd-theme.c: Pick up when to add progress indicator (not
	  yet actually drawn).
	* src/launcher/hd-launcher-app.c: initialise variable to avoid
	  compiler warning.

2008-12-12  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home.c (hd_home_grab_pointer, hd_home_ungrab_pointer,
	  hd_home_do_normal_layout): Fix pointer grab/ungrab with Home edit
	  menu.

2008-12-12  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Changed the default loading screen to a rect created from the theme's